--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 /*Menu de navegación*/
 
 header {
-    background-color: #333;
+    background-color: #071126;
     color: #fff;
     text-align: center;
     padding: 1em;
@@ -25,7 +25,7 @@ header {
 nav {
     display: flex;
     justify-content: center;
-    background-color: #333; /* Ajusta según el color de fondo de tu menú */
+    background-color: #071126; /* Ajusta según el color de fondo de tu menú */
 }
 
 nav a {
@@ -41,7 +41,7 @@ nav a {
 
 nav a:hover {
     background-color: #fff;
-    color: #333;
+    color: #fff;
 }
 
 main {
@@ -56,17 +56,23 @@ section {
 }
 
 p {
-    color: #555;
+    color: #fff;
     margin-bottom: 20px;
 }
 
+h1,h3 {
+    color: #fff;
+}
+
 h2 {
+    color: #fff;
     text-align: center;
     margin-bottom: 20px;
     margin-top: 60px
 }
 
 h4 {
+    color: #fff;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -84,7 +90,7 @@ img {
 }
 
 footer {
-    background-color: #333;
+    background-color: #071126;
     color: #fff;
     text-align: center;
     padding: 1em;
@@ -167,7 +173,6 @@ footer {
 /*Habilidades*/
 
 .habilidades {
-    margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center; /* Centra horizontalmente */
@@ -190,7 +195,6 @@ footer {
 .proyectos li {
     width: 250px; /* Ancho fijo para todas las cajas, ajusta según tus necesidades */
     border: 1px solid #ddd;
-    margin-right: 10px; /* Ajusta el espacio entre proyectos según tus necesidades */
     padding: 10px;
     display: flex;
     flex-direction: column; /* Dispone los elementos en columna dentro de la caja */
@@ -198,7 +202,7 @@ footer {
 
 .proyectos a {
     text-decoration: none;
-    color: #333;
+    color: #fff;
     font-weight: bold;
 }
 
@@ -284,7 +288,7 @@ footer {
     display: inline-block;
     margin-bottom: 20px;
     text-decoration: none;
-    color: #FFCE30;
+    color: #fff;
     font-size: 1.2em;
     transition: color 0.3s ease;
 }
@@ -303,26 +307,26 @@ footer {
 }
 
 .contacto h2 {
-    color: #333;  /* Color del título */
+    color: #fff;  /* Color del título */
     text-align: center;  /* Centrar el título */
 }
 
 .contacto p {
-    color: #666;  /* Color del texto */
+    color: #fff;  /* Color del texto */
     line-height: 1.6;  /* Espacio entre líneas */
 }
 
 .contacto a {
-    color: #333;  /* Color del enlace */
+    color: #fff;  /* Color del enlace */
     text-decoration: none;  /* Eliminar el subrayado del enlace */
 }
 
 .contacto a:hover {
-    color: #FFCE30;  /* Cambiar el color del enlace al pasar el cursor */
+    color: #fff;  /* Cambiar el color del enlace al pasar el cursor */
 }
 
 .contacto i {
-    color: #FFCE30;  /* Color del icono */
+    color: #fff;  /* Color del icono */
     font-size: 24px;  /* Tamaño del icono */
 }
 
@@ -332,21 +336,19 @@ footer {
 #projects,
 #certifications,
 #contact {
-    background-color: #f8f8f8; /* Fondo blanco crema */
+    background-color: #1F5373; /* Fondo blanco crema */
 }
 
 #home,
 #skills,
 #analysis,
 #testimonials {
-    background-color: #ffffff; /* Fondo blanco crema */
+    background-color: #083359; /* Fondo blanco crema */
 }
 
 /* Testimonio */
 
 #testimonials {
-    background-color: #f9f9f9;
-    padding: 20px;
     text-align: center; /* Añade esta línea para centrar el texto */
 }
 
@@ -387,7 +389,7 @@ footer {
 
 .codigo {
     background-color: #000000;
-    color: #FFCE30;
+    color: #fff;
     padding: 1px 1px 1px 7px;  /* Relleno: superior, derecho, inferior, izquierdo */
     font-family: 'Courier New', monospace;
     border: 2px solid #FFCE30;
@@ -421,6 +423,18 @@ footer {
     position: relative;
     }
 
+/* Header */
+    .profile-image {
+        width: 40%; /* Adjust the width and height as needed */
+        height: auto;
+    }
+
+    .banner {
+        flex-direction: column; /* Stack the items vertically on smaller screens */
+    }
+
+/* Otras secciones*/
+
     .proyectos ul {
     display: flex; /* Usa un contenedor flex para los proyectos */
     flex-direction: row; /* Los proyectos se muestran en una fila */
@@ -435,7 +449,7 @@ footer {
     position: absolute;
     top: 50%;
     font-size: 24px;
-    color: #000;
+    color: #fff;
     cursor: pointer;
     opacity: 0.7;
     transition: opacity 0.3s ease;
@@ -474,7 +488,7 @@ footer {
     display: block; /* Hacer que los enlaces ocupen todo el ancho del contenedor */
     text-align: center; /* Centrar el texto */
     padding: 10px; /* Añadir espacio alrededor del texto */
-    color: #000; /* Color del texto */
+    color: #fff; /* Color del texto */
     text-decoration: none; /* Eliminar subrayado del enlace */
     overflow: hidden; /* Ocultar cualquier contenido que se desborde */
     text-overflow: ellipsis; /* Mostrar puntos suspensivos (...) si el texto es demasiado largo */
@@ -482,7 +496,7 @@ footer {
 
     .codigo {
     background-color: #000000;
-    color: #FFCE30;
+    color: #fff;
     padding: 1px 1px 1px 7px;  /* Relleno: superior, derecho, inferior, izquierdo */
     font-family: 'Courier New', monospace;
     border: 2px solid #FFCE30;
