--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ footer {
 /*proyectos*/
 
 .proyectos ul {
+    background-color: #000000;
     list-style-type: none;
     padding: 0;
     display: flex;
@@ -194,7 +195,7 @@ footer {
 
 .proyectos li {
     width: 250px; /* Ancho fijo para todas las cajas, ajusta según tus necesidades */
-    border: 1px solid #ddd;
+    border: 1px solid #000;
     padding: 10px;
     display: flex;
     flex-direction: column; /* Dispone los elementos en columna dentro de la caja */
@@ -211,7 +212,7 @@ footer {
     height: auto; /* Se ajusta automáticamente la altura para mantener la proporción */
 }
 
-/*Scroll de los prouectos*/
+/*Scroll de los proyectos*/
 
 .container {
     position: relative;
@@ -219,7 +220,7 @@ footer {
 
 .container .slider {
     display: flex;
-    background: #f8f8f8;
+    background: #001;
     padding: 2px;
     width: 600 px;
     height: 150 px;
@@ -258,6 +259,8 @@ footer {
 }
 
 .analisis img {
+    background-color: #fff;
+    border-radius: 10%;
     height: 90px; /* ajusta la altura según tus necesidades */
     width: auto; /* permite que el ancho se ajuste automáticamente manteniendo la proporción original */
     margin: 10px; /* ajusta el espacio alrededor de cada imagen según tus necesidades */
@@ -357,6 +360,7 @@ footer {
 }
 
 .testimonial img {
+    background-color: #fff;
     border-radius: 50%;
     width: 100px;
     height: 100px;
