se corrige texto en la sección de analisis y se arregla el tamaño de las imagenes de la sección certificaciones en la parte responsive

--- a/style.css
+++ b/style.css
@@ -498,6 +498,13 @@ footer {
     text-overflow: ellipsis; /* Mostrar puntos suspensivos (...) si el texto es demasiado largo */
     }
 
+    .certificaciones img {
+        width:20%;
+        max-width: 400px;
+        border-radius: 10px;
+        margin: 10px 0;
+    }
+
     .codigo {
     background-color: #000000;
     color: #fff;
